--- a/Codes/Nettoyage/Codes_Complément_base/Complément_base.ipynb
+++ b/Codes/Nettoyage/Codes_Complément_base/Complément_base.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -38,41 +38,39 @@
     "import docx  # python-docx est importé en tant que 'docx'\n",
     "import pandas as pd\n",
     "\n",
-    "def extract_data_from_docx(docx_path):\n",
-    "    doc = docx.Document(docx_path)\n",
+    "def extraire_donnees_depuis_docx(chemin_docx):\n",
+    "    document = docx.Document(chemin_docx)\n",
     "    \n",
-    "    data = []\n",
-    "    current_name = None\n",
-    "    current_question = None\n",
-    "    questions_answers = {}\n",
+    "    donnees = []\n",
+    "    nom_actuel = None\n",
+    "    question_actuelle = None\n",
+    "    questions_reponses = {}\n",
     "    \n",
-    "    for para in doc.paragraphs:\n",
-    "        text = para.text.strip()\n",
+    "    for paragraphe in document.paragraphs:\n",
+    "        texte = paragraphe.text.strip()\n",
     "        \n",
-    "        if para.style.name.startswith('Heading'):  # Suppose que le nom est un titre\n",
-    "            if current_name and questions_answers:\n",
-    "                data.append({'name': current_name, 'q_and_a': questions_answers})\n",
-    "            current_name = text\n",
-    "            questions_answers = {}\n",
-    "            current_question = None\n",
+    "        if paragraphe.style.name.startswith('Heading'):  # Suppose que le nom est un titre\n",
+    "            if nom_actuel and questions_reponses:\n",
+    "                donnees.append({'nom': nom_actuel, 'questions_reponses': questions_reponses})\n",
+    "            nom_actuel = texte\n",
+    "            questions_reponses = {}\n",
+    "            question_actuelle = None\n",
     "        \n",
-    "        elif text.startswith(\"Q\"):  # Suppose que les questions commencent par \"Q\"\n",
-    "            current_question = text\n",
-    "            questions_answers[current_question] = ''\n",
+    "        elif texte.startswith(\"Q\"):  # Suppose que les questions commencent par \"Q\"\n",
+    "            question_actuelle = texte\n",
+    "            questions_reponses[question_actuelle] = ''\n",
     "        \n",
-    "        elif current_question:  # Suppose que tout texte après une question est une réponse\n",
-    "            questions_answers[current_question] += ' ' + text\n",
+    "        elif question_actuelle:  # Suppose que tout texte après une question est une réponse\n",
+    "            questions_reponses[question_actuelle] += ' ' + texte\n",
     "    \n",
-    "    if current_name and questions_answers:\n",
-    "        data.append({'name': current_name, 'q_and_a': questions_answers})\n",
+    "    if nom_actuel and questions_reponses:\n",
+    "        donnees.append({'nom': nom_actuel, 'questions_reponses': questions_reponses})\n",
     "    \n",
-    "    return data\n",
+    "    return donnees\n",
     "\n",
     "# Utilisation\n",
-    "docx_path = 'réponses-ARS-Carré-dart-sans mise en fome.docx'\n",
-    "extracted_data = extract_data_from_docx(docx_path)\n",
-    "\n",
-    "\n",
+    "chemin_docx = 'réponses-ARS-Carré-dart-sans mise en fome.docx'\n",
+    "donnees_extraites = extraire_donnees_depuis_docx(chemin_docx)\n",
     "\n",
     "# Charger le fichier Excel avec pandas\n",
     "df = pd.read_excel('spacestri.xlsx')\n",
@@ -84,33 +82,32 @@
     "df['réponse2'] = ''\n",
     "\n",
     "# Parcourir les données extraites du DOCX\n",
-    "for entry in extracted_data:\n",
-    "    name = entry['name']\n",
-    "    questions = list(entry['q_and_a'].keys())\n",
-    "    answers = list(entry['q_and_a'].values())\n",
+    "for entree in donnees_extraites:\n",
+    "    nom = entree['nom']\n",
+    "    questions = list(entree['questions_reponses'].keys())\n",
+    "    reponses = list(entree['questions_reponses'].values())\n",
     "    \n",
     "    # Si le nom est dans le DataFrame, on remplit les colonnes correspondantes\n",
-    "    if name in df['nom'].values:\n",
-    "        df.loc[df['nom'] == name, 'question1'] = questions[0] if len(questions) > 0 else ''\n",
-    "        df.loc[df['nom'] == name, 'réponse1'] = answers[0] if len(answers) > 0 else ''\n",
-    "        df.loc[df['nom'] == name, 'question2'] = questions[1] if len(questions) > 1 else ''\n",
-    "        df.loc[df['nom'] == name, 'réponse2'] = answers[1] if len(answers) > 1 else ''\n",
+    "    if nom in df['nom'].values:\n",
+    "        df.loc[df['nom'] == nom, 'question1'] = questions[0] if len(questions) > 0 else ''\n",
+    "        df.loc[df['nom'] == nom, 'réponse1'] = reponses[0] if len(reponses) > 0 else ''\n",
+    "        df.loc[df['nom'] == nom, 'question2'] = questions[1] if len(questions) > 1 else ''\n",
+    "        df.loc[df['nom'] == nom, 'réponse2'] = reponses[1] if len(reponses) > 1 else ''\n",
     "    \n",
     "    # Si le nom n'est pas dans le DataFrame, on ajoute une nouvelle ligne\n",
     "    else:\n",
-    "        new_row = pd.DataFrame({\n",
-    "            'nom': [name],\n",
+    "        nouvelle_ligne = pd.DataFrame({\n",
+    "            'nom': [nom],\n",
     "            'question1': [questions[0] if len(questions) > 0 else ''],\n",
-    "            'réponse1': [answers[0] if len(answers) > 0 else ''],\n",
+    "            'réponse1': [reponses[0] if len(reponses) > 0 else ''],\n",
     "            'question2': [questions[1] if len(questions) > 1 else ''],\n",
-    "            'réponse2': [answers[1] if len(answers) > 1 else '']\n",
+    "            'réponse2': [reponses[1] if len(reponses) > 1 else '']\n",
     "        })\n",
-    "        df = pd.concat([df, new_row], ignore_index=True)\n",
+    "        df = pd.concat([df, nouvelle_ligne], ignore_index=True)\n",
     "\n",
     "# Sauvegarder le DataFrame mis à jour dans un fichier Excel ou CSV\n",
     "df.to_excel('fichier_mis_a_jour.xlsx', index=False)\n",
-    "print(\"Mise à jour du fichier Excel terminée et sauvegardée dans 'fichier_mis_a_jour.xlsx'\")\n",
-    "\n"
+    "print(\"Mise à jour du fichier Excel terminée et sauvegardée dans 'fichier_mis_a_jour.xlsx'\")\n"
    ]
   }
  ],
