quelques traitement sur le doc.pdf, et jointure avec le csv

--- a/traitement_txt/traitement_donnees_textuelles.ipynb
+++ b/traitement_txt/traitement_donnees_textuelles.ipynb
@@ -260,6 +260,52 @@
     "-  L'orthogrphe\n",
     "- L'etude n'est pas encore finie "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Extraction des reponses***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C'est probablement une section d'artiste.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "import numpy as np\n",
+    "\n",
+    "# Liste d'exemples de texte représentant les sections d'artistes et les réponses\n",
+    "artist_texts = [\"Nom de l'artiste avec description de l'espace...\"]\n",
+    "response_texts = [\"Exemple de réponse typique à Q1 ou Q2...\"]\n",
+    "\n",
+    "# Fonction pour calculer la similarité cosine entre un texte et les exemples fournis\n",
+    "def calculate_similarity(text, reference_texts):\n",
+    "    vectorizer = TfidfVectorizer()\n",
+    "    vectors = vectorizer.fit_transform([text] + reference_texts)\n",
+    "    cosine_sim = cosine_similarity(vectors[0:1], vectors[1:])\n",
+    "    return np.mean(cosine_sim)\n",
+    "\n",
+    "# Exemple d'utilisation : comparer un texte extrait avec les exemples de réponses\n",
+    "text = \"Texte extrait d'une section du PDF...\"\n",
+    "similarity_score = calculate_similarity(text, response_texts)\n",
+    "\n",
+    "if similarity_score > 0.5:  # Seuil à ajuster selon les besoins\n",
+    "    print(\"C'est probablement une réponse.\")\n",
+    "else:\n",
+    "    print(\"C'est probablement une section d'artiste.\")\n"
+   ]
   }
  ],
  "metadata": {
