ajout du code de traduction

--- a/Codes/Nettoyage/Codes_complément_base_Sqlite/SqLITEComplément_base.ipynb
+++ b/Codes/Nettoyage/Codes_complément_base_Sqlite/SqLITEComplément_base.ipynb
@@ -13,24 +13,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df= pd.read_excel('spacestri.xlsx')\n",
-    "print(df.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mise à jour du fichier Excel terminée et sauvegardée dans 'fichier_mis_a_jour.xlsx'\n"
+      "   id             nom  date_ouverture  date_fermeture                 website  \\\n",
+      "0  71         La loge            2012             NaN          www.la-loge.be   \n",
+      "1   8  Jeune création            2006             NaN                     NaN   \n",
+      "2  72       The ister            2011             NaN         www.theister.be   \n",
+      "3  73         Komplot            2002             NaN            www.kmplt.be   \n",
+      "4  74         Abilene            2011             NaN  www.abilenegallery.com   \n",
+      "\n",
+      "                        email                             adresse horaires  \\\n",
+      "0             info@la-loge.be  Kluisstraat - rue de l’Ermitage 86      NaN   \n",
+      "1     jeunecreation@gmail.com                       24 rue Berthe      NaN   \n",
+      "2            info@theister.be                rue Vandenbranden 42      NaN   \n",
+      "3               info@kmplt.be           295 Avenue Van Volxemlaan      NaN   \n",
+      "4  contact@abilenegallery.com              Rue de la Victoire 163      NaN   \n",
+      "\n",
+      "  presentation responsables  ...            slug      pays      ville  \\\n",
+      "0          NaN          NaN  ...         la-loge  Belgique  Bruxelles   \n",
+      "1          NaN          NaN  ...  jeune-creation    France      Paris   \n",
+      "2          NaN          NaN  ...       the-ister  Belgique  Bruxelles   \n",
+      "3          NaN          NaN  ...         komplot  Belgique  Bruxelles   \n",
+      "4          NaN          NaN  ...         abilene  Belgique  Bruxelles   \n",
+      "\n",
+      "    latitude longitude                                   adresse_complete  \\\n",
+      "0  50.828460  4.365647  Kluisstraat - rue de l’Ermitage 86, 1050, Brux...   \n",
+      "1  48.885626  2.339779                24 rue Berthe, 75018, Paris, France   \n",
+      "2  50.851027  4.340663    rue Vandenbranden 42, 1000, Bruxelles, Belgique   \n",
+      "3  50.821609  4.325936  295 Avenue Van Volxemlaan, 1190, Bruxelles, Be...   \n",
+      "4  50.827174  4.352473  Rue de la Victoire 163, 1060, Bruxelles, Belgique   \n",
+      "\n",
+      "  codepostal telephone visite user_id  \n",
+      "0     1050.0       NaN    NaN     NaN  \n",
+      "1    75018.0       NaN    NaN     1.0  \n",
+      "2     1000.0       NaN    NaN     NaN  \n",
+      "3     1190.0       NaN    NaN     NaN  \n",
+      "4     1060.0       NaN    NaN     NaN  \n",
+      "\n",
+      "[5 rows x 36 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df= pd.read_excel('../../../Donnees/spacestri.xlsx')\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "PackageNotFoundError",
+     "evalue": "Package not found at 'réponses-ARS-Carré-dart-sans-mise-en-forme.docx'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mPackageNotFoundError\u001b[0m                      Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 36\u001b[0m\n\u001b[0;32m     34\u001b[0m \u001b[38;5;66;03m# Utilisation\u001b[39;00m\n\u001b[0;32m     35\u001b[0m chemin_docx \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mréponses-ARS-Carré-dart-sans-mise-en-forme.docx\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m---> 36\u001b[0m donnees_extraites \u001b[38;5;241m=\u001b[39m \u001b[43mextraire_donnees_depuis_docx\u001b[49m\u001b[43m(\u001b[49m\u001b[43mchemin_docx\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     38\u001b[0m \u001b[38;5;66;03m# Charger le fichier Excel avec pandas\u001b[39;00m\n\u001b[0;32m     39\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_excel(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../../../Donnees/spacestri.xlsx\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[9], line 5\u001b[0m, in \u001b[0;36mextraire_donnees_depuis_docx\u001b[1;34m(chemin_docx)\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mextraire_donnees_depuis_docx\u001b[39m(chemin_docx):\n\u001b[1;32m----> 5\u001b[0m     document \u001b[38;5;241m=\u001b[39m \u001b[43mdocx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mDocument\u001b[49m\u001b[43m(\u001b[49m\u001b[43mchemin_docx\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      7\u001b[0m     donnees \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m      8\u001b[0m     nom_actuel \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\Noah\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\docx\\api.py:27\u001b[0m, in \u001b[0;36mDocument\u001b[1;34m(docx)\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Return a |Document| object loaded from `docx`, where `docx` can be either a path\u001b[39;00m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;124;03mto a ``.docx`` file (a string) or a file-like object.\u001b[39;00m\n\u001b[0;32m     22\u001b[0m \n\u001b[0;32m     23\u001b[0m \u001b[38;5;124;03mIf `docx` is missing or ``None``, the built-in default document \"template\" is\u001b[39;00m\n\u001b[0;32m     24\u001b[0m \u001b[38;5;124;03mloaded.\u001b[39;00m\n\u001b[0;32m     25\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     26\u001b[0m docx \u001b[38;5;241m=\u001b[39m _default_docx_path() \u001b[38;5;28;01mif\u001b[39;00m docx \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01melse\u001b[39;00m docx\n\u001b[1;32m---> 27\u001b[0m document_part \u001b[38;5;241m=\u001b[39m cast(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDocumentPart\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[43mPackage\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mopen\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdocx\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mmain_document_part)\n\u001b[0;32m     28\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m document_part\u001b[38;5;241m.\u001b[39mcontent_type \u001b[38;5;241m!=\u001b[39m CT\u001b[38;5;241m.\u001b[39mWML_DOCUMENT_MAIN:\n\u001b[0;32m     29\u001b[0m     tmpl \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfile \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m is not a Word file, content type is \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "File \u001b[1;32mc:\\Users\\Noah\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\docx\\opc\\package.py:127\u001b[0m, in \u001b[0;36mOpcPackage.open\u001b[1;34m(cls, pkg_file)\u001b[0m\n\u001b[0;32m    124\u001b[0m \u001b[38;5;129m@classmethod\u001b[39m\n\u001b[0;32m    125\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mopen\u001b[39m(\u001b[38;5;28mcls\u001b[39m, pkg_file: \u001b[38;5;28mstr\u001b[39m \u001b[38;5;241m|\u001b[39m IO[\u001b[38;5;28mbytes\u001b[39m]) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m OpcPackage:\n\u001b[0;32m    126\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Return an |OpcPackage| instance loaded with the contents of `pkg_file`.\"\"\"\u001b[39;00m\n\u001b[1;32m--> 127\u001b[0m     pkg_reader \u001b[38;5;241m=\u001b[39m \u001b[43mPackageReader\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_file\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpkg_file\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    128\u001b[0m     package \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mcls\u001b[39m()\n\u001b[0;32m    129\u001b[0m     Unmarshaller\u001b[38;5;241m.\u001b[39munmarshal(pkg_reader, package, PartFactory)\n",
+      "File \u001b[1;32mc:\\Users\\Noah\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\docx\\opc\\pkgreader.py:22\u001b[0m, in \u001b[0;36mPackageReader.from_file\u001b[1;34m(pkg_file)\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[38;5;129m@staticmethod\u001b[39m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfrom_file\u001b[39m(pkg_file):\n\u001b[0;32m     21\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Return a |PackageReader| instance loaded with contents of `pkg_file`.\"\"\"\u001b[39;00m\n\u001b[1;32m---> 22\u001b[0m     phys_reader \u001b[38;5;241m=\u001b[39m \u001b[43mPhysPkgReader\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpkg_file\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     23\u001b[0m     content_types \u001b[38;5;241m=\u001b[39m _ContentTypeMap\u001b[38;5;241m.\u001b[39mfrom_xml(phys_reader\u001b[38;5;241m.\u001b[39mcontent_types_xml)\n\u001b[0;32m     24\u001b[0m     pkg_srels \u001b[38;5;241m=\u001b[39m PackageReader\u001b[38;5;241m.\u001b[39m_srels_for(phys_reader, PACKAGE_URI)\n",
+      "File \u001b[1;32mc:\\Users\\Noah\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\docx\\opc\\phys_pkg.py:21\u001b[0m, in \u001b[0;36mPhysPkgReader.__new__\u001b[1;34m(cls, pkg_file)\u001b[0m\n\u001b[0;32m     19\u001b[0m         reader_cls \u001b[38;5;241m=\u001b[39m _ZipPkgReader\n\u001b[0;32m     20\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m---> 21\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m PackageNotFoundError(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPackage not found at \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m pkg_file)\n\u001b[0;32m     22\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:  \u001b[38;5;66;03m# assume it's a stream and pass it to Zip reader to sort out\u001b[39;00m\n\u001b[0;32m     23\u001b[0m     reader_cls \u001b[38;5;241m=\u001b[39m _ZipPkgReader\n",
+      "\u001b[1;31mPackageNotFoundError\u001b[0m: Package not found at 'réponses-ARS-Carré-dart-sans-mise-en-forme.docx'"
      ]
     }
    ],
@@ -69,11 +121,11 @@
     "    return donnees\n",
     "\n",
     "# Utilisation\n",
-    "chemin_docx = 'réponses-ARS-Carré-dart-sans mise en fome.docx'\n",
+    "chemin_docx = 'réponses-ARS-Carré-dart-sans-mise-en-forme.docx'\n",
     "donnees_extraites = extraire_donnees_depuis_docx(chemin_docx)\n",
     "\n",
     "# Charger le fichier Excel avec pandas\n",
-    "df = pd.read_excel('spacestri.xlsx')\n",
+    "df = pd.read_excel('../../../Donnees/spacestri.xlsx')\n",
     "\n",
     "# Ajouter les colonnes pour les questions et réponses dans le DataFrame\n",
     "df['question1'] = ''\n",
@@ -118,9 +170,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'donnees_extraites' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 48\u001b[0m\n\u001b[0;32m     45\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m nom_responsable, sites_web\n\u001b[0;32m     47\u001b[0m \u001b[38;5;66;03m# Parcourir les données extraites du DOCX\u001b[39;00m\n\u001b[1;32m---> 48\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m entree \u001b[38;5;129;01min\u001b[39;00m \u001b[43mdonnees_extraites\u001b[49m:\n\u001b[0;32m     49\u001b[0m     nom \u001b[38;5;241m=\u001b[39m entree[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnom\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m     50\u001b[0m     questions \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(entree[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mquestions_reponses\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mkeys())\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'donnees_extraites' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import docx  # python-docx est importé en tant que 'docx'\n",
     "import pandas as pd\n",
@@ -465,7 +529,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -479,7 +543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
