L'utilisation du modéle BERTopic

--- a/Codes/Bertopic/bertopic.ipynb
+++ b/Codes/Bertopic/bertopic.ipynb
@@ -1,11 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Pour ce Notebook , on a utilisé le modéle \"all-MiniLM-L6-v2\" qui est entrainé sur des données textuelles en anglais \n",
+    "#### On a enlevé les lignes vides de notre database , les stopwords , on a fusionné les 4 colonnes textuelles dans une seule colonne docs\n",
+    "#### Enfin on a utilisé le modéle pour les classer "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "from bertopic import BERTopic\n",
     "from sentence_transformers import SentenceTransformer\n"
    ]
@@ -43,21 +53,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Création et entrainement du modéle BERTopic"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Création et entrainement du modéle BERTopic\n",
     "### Liste des topics "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Stop_words"
    ]
   },
   {
