maj semi supervised

--- a/Codes/GPT_model/GPT_model.ipynb
+++ b/Codes/GPT_model/GPT_model.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\AnasJB\\AppData\\Local\\Temp\\ipykernel_4360\\3217850383.py:18: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "C:\\Users\\Noah\\AppData\\Local\\Temp\\ipykernel_4364\\3217850383.py:18: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  mask_ligne_vide = df[colonnes_textuelles].applymap(est_vide_ou_espace).all(axis=1)\n"
      ]
     }
@@ -449,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
