--- a/Codes/Nettoyage/Nettoyage_CSV/exploration.ipynb
+++ b/Codes/Nettoyage/Nettoyage_CSV/exploration.ipynb
@@ -61,6 +61,7 @@
    "source": [
     "fichier_chemin = r'..\\..\\..\\Donnees\\spacestri.xlsx'\n",
     "df = p.read_excel(fichier_chemin)\n",
+    "df1 = p.read_csv(\"../../../Donnees/spaces.csv\")\n",
     "print(df.head())"
    ]
   },
@@ -524,22 +525,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Noah\\AppData\\Local\\Temp\\ipykernel_12788\\3065559010.py:6: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
-      "  df = df.applymap(enlever_balises_html)\n",
-      "C:\\Users\\Noah\\AppData\\Local\\Temp\\ipykernel_12788\\3065559010.py:4: MarkupResemblesLocatorWarning: The input looks more like a filename than markup. You may want to open this file and pass the filehandle into Beautiful Soup.\n",
+      "C:\\Users\\Noah\\AppData\\Local\\Temp\\ipykernel_14560\\3054509210.py:6: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  df1 = df1.applymap(enlever_balises_html)\n",
+      "C:\\Users\\Noah\\AppData\\Local\\Temp\\ipykernel_14560\\3054509210.py:4: MarkupResemblesLocatorWarning: The input looks more like a filename than markup. You may want to open this file and pass the filehandle into Beautiful Soup.\n",
       "  return BeautifulSoup(texte, 'html.parser').get_text()\n",
-      "C:\\Users\\Noah\\AppData\\Local\\Temp\\ipykernel_12788\\3065559010.py:4: MarkupResemblesLocatorWarning: The input looks more like a URL than markup. You may want to use an HTTP client like requests to get the document behind the URL, and feed that document to Beautiful Soup.\n",
-      "  return BeautifulSoup(texte, 'html.parser').get_text()\n",
-      "C:\\Users\\Noah\\AppData\\Local\\Temp\\ipykernel_12788\\3065559010.py:4: MarkupResemblesLocatorWarning: The input looks more like a filename than markup. You may want to open this file and pass the filehandle into Beautiful Soup.\n",
-      "  return BeautifulSoup(texte, 'html.parser').get_text()\n",
-      "C:\\Users\\Noah\\AppData\\Local\\Temp\\ipykernel_12788\\3065559010.py:4: MarkupResemblesLocatorWarning: The input looks more like a URL than markup. You may want to use an HTTP client like requests to get the document behind the URL, and feed that document to Beautiful Soup.\n",
+      "C:\\Users\\Noah\\AppData\\Local\\Temp\\ipykernel_14560\\3054509210.py:4: MarkupResemblesLocatorWarning: The input looks more like a URL than markup. You may want to use an HTTP client like requests to get the document behind the URL, and feed that document to Beautiful Soup.\n",
       "  return BeautifulSoup(texte, 'html.parser').get_text()\n"
      ]
     }
@@ -550,8 +547,9 @@
     "    if isinstance(texte, str):\n",
     "        return BeautifulSoup(texte, 'html.parser').get_text()\n",
     "    return texte\n",
-    "df = df.applymap(enlever_balises_html)\n",
-    "df.to_excel('spacestri.xlsx', index=False)\n",
+    "df1 = df1.applymap(enlever_balises_html)\n",
+    "#df.to_excel('spacestri.xlsx', index=False)\n",
+    "df1.to_csv('../../../Donnees/spacesnew.csv', index=False)\n",
     "    "
    ]
   }
