Pré traitement 1 de la base

--- a/Mon Code/BaseComplement.ipynb
+++ b/Mon Code/BaseComplement.ipynb
@@ -164,6 +164,20 @@
     "    \n",
     "    return nom_responsable, sites_web\n",
     "\n",
+    "# Charger le fichier Excel avec pandas\n",
+    "df = pd.read_excel('spacestri.xlsx')\n",
+    "\n",
+    "# Ajouter les colonnes pour les questions et réponses dans le DataFrame\n",
+    "df['question1'] = ''\n",
+    "df['réponse1'] = ''\n",
+    "df['question2'] = ''\n",
+    "df['réponse2'] = ''\n",
+    "df['nom_responsable'] = ''\n",
+    "df['site_web'] = ''\n",
+    "\n",
+    "# Vérifier la dernière valeur d'ID dans le DataFrame\n",
+    "dernier_id = df['id'].max() if 'id' in df.columns else 0  # Si la colonne 'id' existe, on prend sa valeur max, sinon on commence à 0\n",
+    "\n",
     "# Parcourir les données extraites du DOCX\n",
     "for entree in donnees_extraites:\n",
     "    nom = entree['nom']\n",
@@ -190,6 +204,7 @@
     "    \n",
     "    # Si le nom n'est pas dans le DataFrame, on ajoute une nouvelle ligne\n",
     "    else:\n",
+    "        dernier_id += 1  # Incrémentation de l'ID\n",
     "        nom_responsable, sites_web = extraire_nom_et_sites(reponses[1] if len(reponses) > 1 else '')\n",
     "        \n",
     "        # Afficher pour vérification\n",
@@ -198,6 +213,7 @@
     "        print(f\"Sites web : {', '.join(sites_web)}\\n\")\n",
     "        \n",
     "        nouvelle_ligne = pd.DataFrame({\n",
+    "            'id': [dernier_id],\n",
     "            'nom': [nom],\n",
     "            'question1': [questions[0] if len(questions) > 0 else ''],\n",
     "            'réponse1': [reponses[0] if len(reponses) > 0 else ''],\n",
@@ -208,7 +224,9 @@
     "        })\n",
     "        df = pd.concat([df, nouvelle_ligne], ignore_index=True)\n",
     "\n",
-    "\n"
+    "# Sauvegarder le DataFrame mis à jour dans un fichier Excel ou CSV\n",
+    "df.to_excel('fichier_mis_a_jour.xlsx', index=False)\n",
+    "print(\"Mise à jour du fichier Excel terminée et sauvegardée dans 'fichier_mis_a_jour.xlsx'\")\n"
    ]
   }
  ],
